# ANVIL-

./: .gitignore  ANVIL_SEED_PITCH_SCRIPT.md  README.md  ROADMAP.md  anvil_mcp_config.json  pyproject.toml
anvil/: __init__.py  __main__.py  cli.py  config.py  daemon.py  mcp_server.py
anvil/chaos/: __init__.py  fuzzer.py
anvil/compress/: __init__.py  engine.py
anvil/extract/: __init__.py  classifier.py  compiler.py  components.py  effects.py  icons.py  palette.py  responsive.py  spacing.py  structure.py  typography.py
anvil/generate/: __init__.py  engine.py  loop.py
anvil/generate/_ARCHIVED/: engine.py  layout_engine.py  loop.py
anvil/taste/: __init__.py  biomechanics.py  css_tokenizer.py  scorer.py  tensor.py  verifier.py
anvil/taste/profiles/: creator_hub.json  crypto_reference.json  neon_glass.json  plan_wise.json  real_estate.json  spark_pixel.json
anvil/vision/: __init__.py  block_match.py  capture.py  compare.py  gestalt.py  physics.py  saliency.py  semantic.py
anvil/watcher/: __init__.py  guard.py
anvil/z3_guard/: __init__.py  provers.py
demo/: generate_test_dashboard.py  index.html  plan_wise_generated.html  run_pipeline.py  test_v2_engine.py
demo/extracted/: design_system.json  responsive.css  tailwind.config.js  tokens.css
demo/output/: design_system.json  responsive.css  tailwind.config.js  tokens.css
demo/output_v2/: index.html
replicate_output/: design_system.json  index.html  responsive.css  style.css  tailwind.config.js  tokens.css
tests/: test_anvil.py  test_stress.py
