[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anvil"
version = "0.1.0"
description = "Forge AI Code Into Production Steel — The verification layer for AI-generated code"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Ramli T. Michael"}]
requires-python = ">=3.10"
dependencies = [
    "z3-solver>=4.12.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
vision = ["Pillow>=10.0", "scikit-learn>=1.3", "opencv-python>=4.8.0", "scipy>=1.11.0"]
extract = ["opencv-python>=4.8.0", "scikit-learn>=1.3", "Pillow>=10.0", "scipy>=1.11.0"]
generate = ["playwright>=1.40"]
full = ["anvil[vision,extract,generate]"]
dev = ["pytest>=7.0", "httpx>=0.24"]

[project.scripts]
anvil = "anvil.cli:main"

[tool.setuptools.packages.find]
include = ["anvil*"]
